--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <canvas id="webgl-canvas"></canvas>
 
     <!-- Load your main script as a module -->
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./main.js" defer></script>
 </body>
 </html>
