--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
 
     <!-- Canvas for Three.js -->
-    <canvas id="webgl-canvas"></canvas>
+    <canvas class="webgl"></canvas>
 
     <!-- Load your main script as a module -->
     <script type="module" src="./main.js" defer></script>
